--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 .content-wrapper {
-    max-width: 1200px; 
+    /* التعديل هنا: جعل أقصى عرض 800px بدلاً من 1200px لجعل الصفحة "متوسطة" */
+    max-width: 800px; 
     margin-left: auto;
     margin-right: auto;
     text-align: center; 
@@ -32,22 +33,15 @@ Transition: background-color 0.3s ease;}
 .button:hover{Background-color: #0056b3;}
 
 .product-card img {
-    /* تم تقليل أقصى عرض للصور داخل الجدول لجعل الجدول أصغر */
-    max-width: 80%; /* كان 100% */
+    max-width: 100%;
     height: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 .product-card {
-    /* تم تقليل أقصى عرض للجدول نفسه */
-    max-width: 700px; 
     margin-left: auto;
     margin-right: auto;
-}
-/* إضافة بسيطة لتقليل حجم خط عناوين المنتجات دون تغيير واسع في CSS */
-.product-card font {
-    font-size: 18px !important; /* تقليل حجم الخط في عناوين المنتجات */
 }
 
 </style>
@@ -56,50 +50,50 @@ Transition: background-color 0.3s ease;}
 
 <div class="content-wrapper">
 
-    <img src="الشعار بدون خلفية.png" alt="BuyZone" height="150" width="250"><br>
+    <img src="الشعار بدون خلفية.png" alt="BuyZone" height="250" width="350"><br>
 
-    <b><font SIZE="4" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br> 
+    <b><font SIZE="5" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br> 
     _______________________________________<p></font>
-    <font color="black" SIZE="6" face="DecoType Naskh Variants">مرحباً بكم في صفحة الاجهزة الكهربائية</font> <p>
-    
+    <font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الاجهزة الكهربائية</font> <p>
+    <pre>
     <table class="product-card" bgcolor="white" border="3" bordercolor="silver" cellspacing="3" cellpadding="5">
     <tr>
-    <th><a href="شريحة٧.html"><IMG SRC="شريحة7.PNG" ALT="مكينة صنع القهوة" width="150">
-    <p><FONT color="red" SIZE="3" FACE="ARIAL">مكينة صناعة القهوة اسبريسوا كوب واحد
+    <th><a href="شريحة٧.html"><IMG SRC="شريحة7.PNG" ALT="مكينة صنع القهوة">
+    <p><FONT color="red" SIZE="5" FACE="ARIAL">مكينة صناعة القهوة اسبريسوا كوب واحد
     (ضمان سنتين)</th>
-    <th><a href="شريحة٢.html"><IMG SRC="شريحة2.PNG" ALT="خلاطة كهربائية" width="150">
-    <p><FONT color="red" SIZE="3" FACE="ARIAL">خلاطة عصائر "سوناي" حجم كبير درجة أولى 
+    <th><a href="شريحة٢.html"><IMG SRC="شريحة2.PNG" ALT="خلاطة كهربائية">
+    <p><FONT color="red" SIZE="5" FACE="ARIAL">خلاطة عصائر "سوناي" حجم كبير درجة أولى 
     خلاطة بهارات + قنينة ماء مجاناً +</th>
     </tr>
     <tr>
-    <td><a href="شريحة٩.html"><IMG SRC="شريحة9.PNG" ALT="روبوت التنظيف" width="150">
-    <p><FONT color="red" SIZE="3" FACE="ARIAL">GPS مكنسة كهربائية روبوتيك مع نظام 
+    <td><a href="شريحة٩.html"><IMG SRC="شريحة9.PNG" ALT="روبوت التنظيف">
+    <p><FONT color="red" SIZE="5" FACE="ARIAL">GPS مكنسة كهربائية روبوتيك مع نظام 
     (ضمان 4 سنوات)</td>
-    <td><a href="شريحة٨.html"><IMG SRC="شريحة8.PNG" ALT="عجانة خليط" width="150">
-    <p><FONT color="red" SIZE="3" FACE="ARIAL">عجانة خليط "كيكوتيك" مطورة درجة ثاني
+    <td><a href="شريحة٨.html"><IMG SRC="شريحة8.PNG" ALT="عجانة خليط">
+    <p><FONT color="red" SIZE="5" FACE="ARIAL">عجانة خليط "كيكوتيك" مطورة درجة ثاني
     (ضمان 3 سنوات)</td>
     </tr>
     <tr>
-    <td><a href="شريحة٣.html"><IMG SRC="شريحة3.PNG" ALT="غلاية شاي" width="150">
-    <p><FONT color="red" SIZE="3" FACE="ARIAL">غلاي شاي "كينود" درجة أولى 
+    <td><a href="شريحة٣.html"><IMG SRC="شريحة3.PNG" ALT="غلاية شاي">
+    <p><FONT color="red" SIZE="5" FACE="ARIAL">غلاي شاي "كينود" درجة أولى 
     (ضمان 5 سنوات)</td>
-    <td><a href="شريحة٤.html"><IMG SRC="شريحة4.PNG" ALT="غسالة لون رمادي" width="150">
-    <p><FONT color="red" SIZE="3" FACE="ARIAL">غسالة "بووش" اتوماتيك باب امامي لون رمادي 
+    <td><a href="شريحة٤.html"><IMG SRC="شريحة4.PNG" ALT="غسالة لون رمادي">
+    <p><FONT color="red" SIZE="5" FACE="ARIAL">غسالة "بووش" اتوماتيك باب امامي لون رمادي 
     (ضمان 5 سنوات)</td>
     <tr>
-    <td><a href="شريحة٥.html"><IMG SRC="شريحة5.PNG" ALT="غسالة لون أبيض" width="150">
-    <p><FONT color="red" SIZE="3" FACE="ARIAL">غسالة "بووش" اتوماتيك باب امامي لون أبيض 
+    <td><a href="شريحة٥.html"><IMG SRC="شريحة5.PNG" ALT="غسالة لون أبيض">
+    <p><FONT color="red" SIZE="5" FACE="ARIAL">غسالة "بووش" اتوماتيك باب امامي لون أبيض 
     (ضمان 5 سنوات)</td>
-    <td><a href="شريحة١٠.html"><IMG SRC="شريحة10.PNG" ALT="مكنسة كهربائية" width="150">
-    <p><FONT color="red" SIZE="3" FACE="ARIAL">"مكنسة كهربائية كلاسيكية "باناسونيك 
+    <td><a href="شريحة١٠.html"><IMG SRC="شريحة10.PNG" ALT="مكنسة كهربائية">
+    <p><FONT color="red" SIZE="5" FACE="ARIAL">"مكنسة كهربائية كلاسيكية "باناسونيك 
     (ضمان سنتين)</td>
     </tr>
     <tr>
-    <td><a href="شريحة١.html"><IMG SRC="شريحة1.PNG" ALT="مكنسة كهربائية" width="150">
-    <p><FONT color="red" SIZE="3" FACE="ARIAL">"مكنسة بشكل عصا طويلة وحديثة "فيليبس 
+    <td><a href="شريحة١.html"><IMG SRC="شريحة1.PNG" ALT="مكنسة كهربائية">
+    <p><FONT color="red" SIZE="5" FACE="ARIAL">"مكنسة بشكل عصا طويلة وحديثة "فيليبس 
     مكنسة فرشاة قصيرة +</td>
-    <td><a href="شريحة٦.html"><IMG SRC="شريحة6.PNG" ALT="ثلاجة هيتاشي" width="150">
-    <p><FONT color="red" SIZE="3" FACE="ARIAL">ثلاجة "هيتاشي" حجم كبير '2 ابواب' درجة أولى 
+    <td><a href="شريحة٦.html"><IMG SRC="شريحة6.PNG" ALT="ثلاجة هيتاشي">
+    <p><FONT color="red" SIZE="5" FACE="ARIAL">ثلاجة "هيتاشي" حجم كبير '2 ابواب' درجة أولى 
     (ضمان 10 سنوات)</td>
     </tr>
 
