--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -46,7 +46,7 @@ text-align: center;
 
 <b><font SIZE="5" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br> 
 _______________________________________<p></font>
-<font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الاجهزة الكهربائية</font> <p>
+<font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الاجهزة الكهربائية</font> <p></center>
 
 <table class="product-card" bgcolor="white" border="3" bordercolor="silver" align="center" cellspacing="3" cellpadding="5">
 <center><tr>
@@ -96,3 +96,4 @@ _______________________________________<p></font>
 </body>
 
 </html>
+
