--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -42,11 +42,11 @@ text-align: center;
 </style>
 </head>
 <body bgcolor="azure" style="background-image:url('خلفية صفحة الاجهزة الكهربائية.png'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
-<center><img src="الشعار بدون خلفية.png" alt="BuyZone" height="250" width="350"><br>
+<img src="الشعار بدون خلفية.png" alt="BuyZone" height="250" width="350"><br>
 
 <b><font SIZE="5" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br> 
 _______________________________________<p></font>
-<font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الاجهزة الكهربائية</font> <p></center>
+<font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الاجهزة الكهربائية</font> <p>
 
 <table class="product-card" bgcolor="white" border="3" bordercolor="silver" align="center" cellspacing="3" cellpadding="5">
 <center><tr>
@@ -96,4 +96,5 @@ _______________________________________<p></font>
 </body>
 
 </html>
+
 
