--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -48,7 +48,7 @@ text-align: center;
 _______________________________________<p></font>
 <font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الاجهزة الكهربائية</font> <p>
 
-<table class="product-card" bgcolor="white" border="3" bordercolor="silver" align="center" cellspacing="3" cellpadding="5">
+<table class="product-card" bgcolor="white" border="3" bordercolor="silver" align="center" cellspacing="3" cellpadding="5" style="max-width: 100%; height: auto;">
 <center><tr>
 <th><a href="شريحة٧.html"><IMG SRC="شريحة7.PNG" ALT="مكينة صنع القهوة">
 <p><FONT color="red" SIZE="5" FACE="ARIAL">مكينة صناعة القهوة اسبريسوا كوب واحد
@@ -96,5 +96,6 @@ _______________________________________<p></font>
 </body>
 
 </html>
+
 
 
