--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -1,102 +1,163 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <head>
 <title>الاجهزة الكهربائية</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body {
-text-align: center;
+    /* توسيط محتوى الصفحة (الصور والنصوص) */
+    text-align: center;
+    /* استخدام CSS لتنسيق الخلفية بشكل أفضل */
+    background-color: azure;
+    background-image: url('خلفية صفحة الاجهزة الكهربائية.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
+/* تنسيق شعار الموقع */
+.logo {
+    height: 250px;
+    width: 350px;
+    display: block; /* لضمان التوسيط بواسطة text-align: center على الـ body */
+    margin: 0 auto; /* طريقة أخرى لضمان التوسيط إذا لزم الأمر */
+}
+
+/* تنسيق النص الترحيبي */
+.welcome-slogan {
+    font-size: 20px; /* تم تقليل حجم الخط ليكون أكثر ملاءمة للهاتف */
+    color: darkorange;
+    font-family: Tahoma;
+    display: block;
+    margin-bottom: 20px;
+}
+.page-title {
+    color: black;
+    font-size: 40px; /* حجم كبير للعنوان */
+    font-family: 'DecoType Naskh Variants';
+    display: block;
+    margin-bottom: 20px;
+}
+
+/* تنسيق بطاقة المنتج (الجدول) */
 .product-card {
-max-width: 400px;
-margin: 20px auto; 
-width: 90%; 
+    max-width: 95%; /* زيادة الحد الأقصى للعرض ليكون مستجيبًا */
+    width: 700px; /* عرض ثابت نسبيًا للشاشات الكبيرة */
+    margin: 20px auto; /* **الحل الرئيسي للتوسيط الأفقي** */
+    background-color: white;
+    border: 3px solid silver;
+    border-spacing: 3px;
+    border-collapse: separate;
+    padding: 5px;
 }
-.description-text {
-text-align: center; 
-display: block;
-margin: 10px 15px 20px 15px; 
-line-height: 1.5; 
+
+/* توسيط المحتوى داخل خلايا الجدول (الصور والنصوص) */
+.product-card td, .product-card th {
+    text-align: center;
+    vertical-align: top; /* محاذاة النص للأعلى داخل الخلية */
+    padding: 10px;
 }
-.container {text-align: center;}
-H1 {font-size: 24px;
-Margin-bottom: 20px;}
+
+/* تنسيق صور المنتج */
+.product-card img {
+    max-width: 100%; /* ضمان أن الصورة لا تتجاوز حجم الخلية */
+    height: auto;
+    display: block;
+    margin: 0 auto 10px auto; /* توسيط الصورة داخل الخلية */
+}
+
+/* تنسيق نص وصف المنتج */
+.product-description {
+    color: red;
+    font-size: 20px; /* تم التعديل باستخدام CSS بدلاً من <font SIZE> */
+    font-family: Arial;
+    display: block;
+    margin-top: 5px;
+}
+
 .buttons-container {
-Display: flex;
-Gap: 20px;
-Justify-content: center;}
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
 .button {
-Display: inline-block;
-Padding: 15px 30px;
-Background-color: #FF0000;
-Color: white;
-Text-decoration: none;
-Border-radius: 30px;
-Font-size: 25px;
-Font-weight: bold;
-Transition: background-color 0.3s ease;}
+    display: inline-block;
+    padding: 15px 30px;
+    background-color: #FF0000;
+    Color: white;
+    Text-decoration: none;
+    Border-radius: 30px;
+    Font-size: 25px;
+    Font-weight: bold;
+    Transition: background-color 0.3s ease;
+}
 .button:hover{Background-color: #0056b3;}
-p font[color="red"] {
-display: block;
-text-align: center;
 </style>
 </head>
-<body bgcolor="azure" style="background-image:url('خلفية صفحة الاجهزة الكهربائية.png'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
-<img src="الشعار بدون خلفية.png" alt="BuyZone" height="250" width="350"><br>
+<body>
 
-<b><font SIZE="5" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br> 
-_______________________________________<p></font>
-<font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الاجهزة الكهربائية</font> <p>
+<img src="الشعار بدون خلفية.png" alt="BuyZone" class="logo">
 
-<table class="product-card" bgcolor="white" border="3" bordercolor="silver" align="center" cellspacing="3" cellpadding="5">
-<center><tr>
-<th><a href="شريحة٧.html"><IMG SRC="شريحة7.PNG" ALT="مكينة صنع القهوة">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">مكينة صناعة القهوة اسبريسوا كوب واحد
-(ضمان سنتين)</th>
-<th><a href="شريحة٢.html"><IMG SRC="شريحة2.PNG" ALT="خلاطة كهربائية">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">خلاطة عصائر "سوناي" حجم كبير درجة أولى 
-خلاطة بهارات + قنينة ماء مجاناً +</th>
-</tr>
-<tr>
-<td><center><a href="شريحة٩.html"><IMG SRC="شريحة9.PNG" ALT="روبوت التنظيف">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">GPS مكنسة كهربائية روبوتيك مع نظام 
-(ضمان 4 سنوات)</td>
-<td><center><a href="شريحة٨.html"><IMG SRC="شريحة8.PNG" ALT="عجانة خليط">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">عجانة خليط "كيكوتيك" مطورة درجة ثاني
-(ضمان 3 سنوات)</td>
-</tr>
-<tr>
-<td><center><a href="شريحة٣.html"><IMG SRC="شريحة3.PNG" ALT="غلاية شاي">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">غلاي شاي "كينود" درجة أولى 
-(ضمان 5 سنوات)</td>
-<td><center><a href="شريحة٤.html"><IMG SRC="شريحة4.PNG" ALT="غسالة لون رمادي">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">غسالة "بووش" اتوماتيك باب امامي لون رمادي 
-(ضمان 5 سنوات)</td>
-<tr>
-<td><center><a href="شريحة٥.html"><IMG SRC="شريحة5.PNG" ALT="غسالة لون أبيض">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">غسالة "بووش" اتوماتيك باب امامي لون أبيض 
-(ضمان 5 سنوات)</td>
-<td><center><a href="شريحة١٠.html"><IMG SRC="شريحة10.PNG" ALT="مكنسة كهربائية">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">"مكنسة كهربائية كلاسيكية "باناسونيك 
-(ضمان سنتين)</td>
-</tr>
-<tr>
-<td><center><a href="شريحة١.html"><IMG SRC="شريحة1.PNG" ALT="مكنسة كهربائية">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">"مكنسة بشكل عصا طويلة وحديثة "فيليبس 
-مكنسة فرشاة قصيرة +</td>
-<td><center><a href="شريحة٦.html"><IMG SRC="شريحة6.PNG" ALT="ثلاجة هيتاشي">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">ثلاجة "هيتاشي" حجم كبير '2 ابواب' درجة أولى 
-(ضمان 10 سنوات)</td>
-</tr>
+<span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج</span>
+<hr style="width: 30%; border: 1px solid darkorange; margin-top: -10px;">
 
-</table><p>
+<span class="page-title">مرحباً بكم في صفحة الاجهزة الكهربائية</span>
+
+<table class="product-card">
+<tr>
+    <th>
+        <a href="شريحة٧.html"><IMG SRC="شريحة7.PNG" ALT="مكينة صنع القهوة"></a>
+        <span class="product-description">مكينة صناعة القهوة اسبريسوا كوب واحد (ضمان سنتين)</span>
+    </th>
+    <th>
+        <a href="شريحة٢.html"><IMG SRC="شريحة2.PNG" ALT="خلاطة كهربائية"></a>
+        <span class="product-description">خلاطة عصائر "سوناي" حجم كبير درجة أولى خلاطة بهارات + قنينة ماء مجاناً +</span>
+    </th>
+</tr>
+<tr>
+    <td>
+        <a href="شريحة٩.html"><IMG SRC="شريحة9.PNG" ALT="روبوت التنظيف"></a>
+        <span class="product-description">مكنسة كهربائية روبوتيك مع نظام GPS (ضمان 4 سنوات)</span>
+    </td>
+    <td>
+        <a href="شريحة٨.html"><IMG SRC="شريحة8.PNG" ALT="عجانة خليط"></a>
+        <span class="product-description">عجانة خليط "كيكوتيك" مطورة درجة ثاني (ضمان 3 سنوات)</span>
+    </td>
+</tr>
+<tr>
+    <td>
+        <a href="شريحة٣.html"><IMG SRC="شريحة3.PNG" ALT="غلاية شاي"></a>
+        <span class="product-description">غلاي شاي "كينود" درجة أولى (ضمان 5 سنوات)</span>
+    </td>
+    <td>
+        <a href="شريحة٤.html"><IMG SRC="شريحة4.PNG" ALT="غسالة لون رمادي"></a>
+        <span class="product-description">غسالة "بووش" اتوماتيك باب امامي لون رمادي (ضمان 5 سنوات)</span>
+</tr>
+<tr>
+    <td>
+        <a href="شريحة٥.html"><IMG SRC="شريحة5.PNG" ALT="غسالة لون أبيض"></a>
+        <span class="product-description">غسالة "بووش" اتوماتيك باب امامي لون أبيض (ضمان 5 سنوات)</span>
+    </td>
+    <td>
+        <a href="شريحة١٠.html"><IMG SRC="شريحة10.PNG" ALT="مكنسة كهربائية"></a>
+        <span class="product-description">مكنسة كهربائية كلاسيكية "باناسونيك" (ضمان سنتين)</span>
+    </td>
+</tr>
+<tr>
+    <td>
+        <a href="شريحة١.html"><IMG SRC="شريحة1.PNG" ALT="مكنسة كهربائية"></a>
+        <span class="product-description">مكنسة بشكل عصا طويلة وحديثة "فيليبس" مكنسة فرشاة قصيرة +</span>
+    </td>
+    <td>
+        <a href="شريحة٦.html"><IMG SRC="شريحة6.PNG" ALT="ثلاجة هيتاشي"></a>
+        <span class="product-description">ثلاجة "هيتاشي" حجم كبير '2 ابواب' درجة أولى (ضمان 10 سنوات)</span>
+    </td>
+</tr>
+</table>
+
 <div class="buttons-container">
-<a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
+    <a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
 </div>
 </body>
-
 </html>
-
-
-
-
