--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -14,15 +14,15 @@ body {
 }
 /* تنسيق شعار الموقع */
 .logo {
-    height: 250px;
-    width: 350px;
+    height: 175px;
+    width: 245px;
     display: block;
     margin: 0 auto;
 }
 
 /* تنسيق النص الترحيبي */
 .welcome-slogan {
-    font-size: 20px;
+    font-size: 15px;
     color: darkorange;
     font-family: Tahoma;
     display: block;
@@ -30,7 +30,7 @@ body {
 }
 .page-title {
     color: black;
-    font-size: 40px;
+    font-size: 30px;
     font-family: 'DecoType Naskh Variants';
     display: block;
     margin-bottom: 20px;
@@ -88,7 +88,7 @@ body {
     font-size: 20px;
     font-family: Arial;
     display: block;
-    margin-top: 5px;
+    margin-top: 1px;
 }
 
 .buttons-container {
@@ -100,12 +100,12 @@ body {
 }
 .button {
     display: inline-block;
-    padding: 15px 30px;
+    padding: 10px 20px;
     background-color: #FF0000;
     Color: white;
     Text-decoration: none;
     Border-radius: 30px;
-    Font-size: 25px;
+    Font-size: 15px;
     Font-weight: bold;
     Transition: background-color 0.3s ease;
 }
@@ -170,7 +170,8 @@ body {
 
 <img src="الشعار بدون خلفية.png" alt="BuyZone" class="logo">
 
-<span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج</span>
+<span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج<br>
+___________________________</span>
 <hr style="width: 30%; border: 1px solid darkorange; margin-top: -10px;">
 
 <span class="page-title">مرحباً بكم في صفحة الاجهزة الكهربائية</span>
@@ -233,3 +234,4 @@ body {
 </div>
 </body>
 </html>
+
