--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -45,9 +45,9 @@ body {
     border: 3px solid silver;
     border-spacing: 0; 
     border-collapse: collapse; 
-    padding: 5px;
+    /* **التعديل هنا**: إزالة الحشو السفلي من الجدول */
+    padding: 5px 5px 0 5px; 
     
-    /* لضمان عرض عمودين على اللابتوب */
     display: flex; 
     flex-direction: column; 
 }
@@ -57,7 +57,7 @@ body {
     width: 100%; 
 }
 
-/* **حل مشكلة المسافة أسفل الصورة على اللابتوب** وتوحيد الارتفاع */
+/* توحيد ارتفاع الخلايا وعرضها على اللابتوب */
 .product-card td, .product-card th {
     width: 50%; 
     box-sizing: border-box;
@@ -66,10 +66,11 @@ body {
     min-height: 450px; 
     display: flex; 
     flex-direction: column; 
-    /* **التعديل**: دفع المحتوى إلى الأعلى لإزالة المسافة من أسفل الصورة */
-    justify-content: flex-start; 
+    justify-content: flex-start; /* دفع المحتوى للأعلى */
     align-items: center; 
     border: 1px solid silver; 
+    /* تقليل الهامش السفلي للخلايا */
+    margin-bottom: -1px; /* تعويض أي هامش داخلي قد يسبب فجوة */
 }
 
 /* توحيد صور اللابتوب: تحديد ارتفاع ثابت */
